# smbc-tictactoe-cfr

./: .gitignore  Cargo.toml  README.md
solution_1e4/subgame_0_0/: strategy_5889.bincode
solution_1e4/subgame_0_1/: strategy_3229.bincode
solution_1e4/subgame_0_2/: strategy_3539.bincode
solution_1e4/subgame_0_3/: strategy_3129.bincode
solution_1e4/subgame_0_4/: strategy_5649.bincode
solution_1e4/subgame_1_0/: strategy_3229.bincode
solution_1e4/subgame_1_1/: strategy_8259.bincode
solution_1e4/subgame_1_2/: strategy_3009.bincode
solution_1e4/subgame_1_3/: strategy_3419.bincode
solution_1e4/subgame_1_4/: strategy_3699.bincode
solution_1e4/subgame_2_0/: strategy_3539.bincode
solution_1e4/subgame_2_1/: strategy_3009.bincode
solution_1e4/subgame_2_2/: strategy_989.bincode
solution_1e4/subgame_2_3/: strategy_3719.bincode
solution_1e4/subgame_2_4/: strategy_2819.bincode
solution_1e4/subgame_3_0/: strategy_3129.bincode
solution_1e4/subgame_3_1/: strategy_3419.bincode
solution_1e4/subgame_3_2/: strategy_3719.bincode
solution_1e4/subgame_3_3/: strategy_1919.bincode
solution_1e4/subgame_3_4/: strategy_3399.bincode
solution_1e4/subgame_4_0/: strategy_5649.bincode
solution_1e4/subgame_4_1/: strategy_3699.bincode
solution_1e4/subgame_4_2/: strategy_2819.bincode
solution_1e4/subgame_4_3/: strategy_3399.bincode
solution_1e4/subgame_4_4/: strategy_1079.bincode
src/: best_response.rs  best_response_multiround.rs  best_response_subgame.rs  explore.rs  lib.rs  main.rs  play.rs  play_multiround.rs  play_subgame.rs  solve.rs  solve_multiround.rs  solve_subgame.rs
