[package]
name = "tictac"
version = "0.1.0"
edition = "2021"
default-run = "solve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
strum = "0.24.1"
strum_macros = "0.24.0"
serde = {version="1.0", features = ["derive"]}
bincode = "1.3"
clap = { version = "3.2", features = ["derive"] }
average = "0.13"
rand = "0.8.5"


[[bin]]
name = "solve"
path = "src/solve.rs"

[[bin]]
name = "best_response"
path = "src/best_response.rs"

[[bin]]
name = "explore"
path = "src/explore.rs"

[[bin]]
name = "play"
path = "src/play.rs"
