[package]
name = "tictac"
version = "0.1.0"
edition = "2021"
default-run = "play_multiround"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
strum = "0.24.1"
strum_macros = "0.24.0"
serde = {version="1.0", features = ["derive"]}
bincode = "1.3"
clap = { version = "3.2", features = ["derive"] }
average = "0.13"
rand = "0.8.5"
lazy_static = "1.4.0"
regex = "1.6.0"

[profile.release]
debug = true

[[bin]]
name = "solve_subgame"
path = "src/solve_subgame.rs"

[[bin]]
name = "solve_multiround"
path = "src/solve_multiround.rs"


[[bin]]
name = "best_response_subgame"
path = "src/best_response.rs"

[[bin]]
name = "best_response_multiround"
path = "src/best_response_multiround.rs"

[[bin]]
name = "explore"
path = "src/explore.rs"

[[bin]]
name = "play_subgame"
path = "src/play_subgame.rs"

[[bin]]
name = "play_multiround"
path = "src/play_multiround.rs"
